SCRUM-214 refactor: Recommend Domain 수정